fixed margin for blog and blog posts + new footer (still broken on mobile)

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -11,11 +11,14 @@ p, .f5 { font-size: 18px }
 .link-underline { border-bottom: 1px dotted rgba(0,0,0,.2); padding-bottom: .1rem; text-decoration: none; }
 /* .bg-pattern { background-image: url(img/brillant.png); background-repeat: repeat; } */
 .custom-blue { color: #1b6aff; }
+.twitter-blue { color: #1da1f2; }
+.linkedin-blue { color: #0077b5; }
 .fundrise-orange { color: #f47735 }
 .illustria-red { color: #ea1d2c }
 .dribbble-pink { color: #ea4c89 }
 .medium-green { color: #02b875 }
 .github-grey { color: #24292e }
+.github-light-grey { color: #c6cbd1 }
 .bg-custom-blue { background-color: #1b6aff; }
 .b--custom-blue { border-color: #1b6aff; }
 .custom-gradient-text {
